navigation is much simpler. still need to prevent it from collapsing when smaller size

--- a/static/src/css/navbar.css
+++ b/static/src/css/navbar.css
@@ -1,3 +1,5 @@
-.container {
-  display: inline-block;
+.navbar .navbar-nav {
+  margin: auto;
+  width: 31%;
+  white-space: nowrap; 
 }
